<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.widget.CompoundButton" />
        <variable
            name="operationDto"
            type="com.example.serverapp.OperationDto" />
        <variable
            name="viewmodel"
            type="com.example.clientapp.presentation.ui.homefragment.HomeViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:id="@+id/envolope_card"
        android:layout_weight="1"
        android:checkable="true"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="5dp"
        app:checkedIconTint="@color/white">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        >

        <TextView
            android:id="@+id/fname_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:text="@string/first_num_item"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sname_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:text="@string/sec_num_item"
            app:layout_constraintTop_toBottomOf="@+id/fname_tv" />

        <TextView
            android:id="@+id/result_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:text="@string/result"
            app:layout_constraintTop_toBottomOf="@+id/sname_tv" />

        <TextView
            android:id="@+id/type_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:text="@string/name"
            app:layout_constraintTop_toBottomOf="@+id/result_tv" />


        <TextView
            android:id="@+id/fnum_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:text="@{Integer.toString(operationDto.firstNum)}"
            app:layout_constraintBottom_toBottomOf="@+id/fname_tv"
            app:layout_constraintStart_toEndOf="@+id/fname_tv"
            app:layout_constraintTop_toTopOf="@+id/fname_tv" />


        <TextView
            android:id="@+id/second_num_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:text="@{Integer.toString(operationDto.secNum)}"
            app:layout_constraintBottom_toBottomOf="@+id/sname_tv"
            app:layout_constraintStart_toEndOf="@+id/sname_tv"
            app:layout_constraintTop_toTopOf="@+id/sname_tv" />
        <TextView
            android:id="@+id/result_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:text="@{operationDto.result}"
            app:layout_constraintBottom_toBottomOf="@+id/result_tv"
            app:layout_constraintStart_toEndOf="@+id/result_tv"
            app:layout_constraintTop_toTopOf="@+id/result_tv" />

        <TextView
            android:id="@+id/name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:text="@{operationDto.type}"
            app:layout_constraintBottom_toBottomOf="@+id/type_tv"
            app:layout_constraintStart_toEndOf="@+id/type_tv"
            app:layout_constraintTop_toTopOf="@+id/type_tv" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>